
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/settings_bg"
        android:orientation="vertical" >

        <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/target_wallpaper_service_label"></TextView>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_other_apps" />

            <Button
                android:id="@+id/lwpSelectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_button_choose" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/custom_setting_preset_header"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="fill_parent"
            android:layout_height="100dp" >

            
            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
        		android:orientation="vertical" >
                
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/presetButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/debianswirl" />

            <ImageButton
                android:id="@+id/presetButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eclipseicon" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="85dp"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/mozicon" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ubuntulogo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eclipseicon" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eclipseicon" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eclipseicon" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eclipseicon" />

        </LinearLayout>

            </LinearLayout>
        </ScrollView>
        
        
        <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content"
            
            android:layout_gravity="center"
             android:text="TextView" android:id="@+id/textView3"></TextView>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="100dp" >

            
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
        		android:orientation="vertical" >
                
                
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_settings_3d_title" />
            
                
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_settings_animated_title" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target_settings_disc_summary" />
                
                
        <Button android:id="@+id/defaultSettingsButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activity_button_defaults"></Button>
        
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
